# SparkleCluster

./: .gitignore  LICENSE.md  README.MD  config  docker-compose.yml  input.txt  pyproject.toml  run_map_reduce.sh  run_spark.sh
hadoop_containers_config/: Dockerfile
hadoop_containers_config/namenode/: Dockerfile
src/: mapper.py  reducer.py  spark.py
