[tool.poetry]
name = "mapreduce_job"
version = "0.0.1"
description = "MapReduce jobs with multiple containers"
authors = ["Elyes Mahjoubi"]

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.1.1"
pyspark = "^3.5.1"
psutil = "^5.9.8"
spark = "^0.2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"